# snowalerts-tc-discord

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
src/http-api/: app.py
