[project]
name = "snowalerts-tc-discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.42.9",
    "discord-interactions>=0.4.0",
    "pydantic>=2.12.5",
    "twilio>=9.8.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
